manifests/apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  annotations:
    io.cilium/lb-ipam-ips: 192.168.0.95
spec:
  externalTrafficPolicy: Cluster
  selector:
    kubevirt.io/vm: homeassistant-vm
  ports:
  - name: http
    port: 80
    targetPort: 8123
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  - name: http-ha
    port: 8123
    targetPort: 8123
    protocol: TCP
  - name: mqtt
    port: 1883
    targetPort: 1883
    protocol: TCP
  - name: mqtts
    port: 8883
    targetPort: 8883
    protocol: TCP
  type: LoadBalancer
