manifests/apps/homeassistant/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/instance: homeassistant
    app.kubernetes.io/name: homeassistant
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: https://brands.home-assistant.io/homeassistant/icon.png
    gethomepage.dev/description: Home Automation
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: traefik
  hostnames:
    - homeassistant.homelab.olav.ninja
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homeassistant
          port: 443
