manifests/apps/homeassistant/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`homeassistant.homelab.olav.ninja`)
      services:
        - name: homeassistant
          port: 443
  tls:
    passthrough: true
